# VoiceBot

./: .env  .gitignore  README.md  bot.py  main.py  pyproject.toml  requirements.txt  tts_utils.py  voice_clone.py
backend/: bot.py  tts_utils.py
utils/: default_models.py
