[project]
name = "voice-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.0"
dependencies = [
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "click==8.1.8",
    "dotenv==0.9.9",
    "gtts==2.5.4",
    "idna==3.10",
    "pathlib==1.0.1",
    "python-dotenv==1.1.1",
    "python-telegram-bot>=22.5",
    "requests==2.32.5",
    "typing==3.7.4.3",
    "urllib3==2.5.0",
    "torch",
    "numpy",
]
